@@ -40,6 +40,7 @@ class LayerDock : public QDockWidget
 
 	private slots:
 		void layerChanged(LayerWidget*, bool adjustViewport);
+		void layerClosed(MapLayer*);
 
 	signals:
 		void layersChanged(bool adjustViewport);
